# Proyecto_Tesis_alba-Keneth

./: .env.dist  README.md  manage.py  pyproject.toml  tweets.pkl
alba_keneth/: asgi.py  settings.py  urls.py  wsgi.py
principal/: data.py  models.py  urls.py  utils.py  views.py
principal/migrations/: 0001_initial.py  0002_alertas_fecha.py
static/css/: now-ui-dashboard.css
static/demo/: demo.css
templates/: base.html  dashboard.html  index.html  manual.html  mapa.html
