[tool.poetry]
name = "django-alba-keneth"
version = "0.1.0"
description = "Alba-Keneth"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
Django = "^3.2"
python-decouple = "^3.4"
mysqlclient = "^2.0.3"
tweepy = "^3.10.0"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
